# evolution_to_do

./: .env.local.example  .gitignore  CHANGELOG.md  CLAUDE.md  Project Constitution+Playbook_for_Hackathon-II.md  README.md  VERSION
.spec-kit/: config.yaml
backend/: .env.example  .gitignore  CLAUDE.md  README.md  nixpacks.toml  pyproject.toml  railway.json
backend/scripts/: migrate_v2.py
backend/src/: main.py
backend/src/api/: __init__.py  config.py  database.py  deps.py  main.py
backend/src/api/routes/: categories.py  chat.py  devices.py  events.py  health.py  tasks.py  voice.py
backend/src/cli/: formatters.py  handlers.py  menu.py
backend/src/lib/: validators.py
backend/src/mcp/: __init__.py  server.py
backend/src/mcp/tools/: __init__.py  tool_executor.py
backend/src/models/: __init__.py  category.py  conversation.py  event.py  message.py  task.py  user.py
backend/src/services/: chat_service.py  event_service.py  mqtt_service.py  openai_client.py  task_store.py  voice_service.py
backend/tests/integration/: conftest.py  test_cli.py  test_tasks_api.py
backend/tests/unit/: test_task.py  test_task_store.py
console_app/: README.md  __init__.py  main.py  pyproject.toml  storage_json.py  ui_cli.py
console_app/tests/: test_models.py  test_services.py  test_storage_json.py
console_app_v1/: README.md  __init__.py  main.py  task.py  task_manager.py
console_app_v2/: README.md  __init__.py  app.py  main.py  main_cli.py  models.py  pyproject.toml  services.py  tasks.json
docs/: AUTH_AFTER_GOOGLE_LOGIN_FIX.md  BEFORE_NEW_TOOL.md  BETTER_AUTH_REFERENCE.md  COMPREHENSIVE_EVALUATION_REPORT.md  CONSTITUTION_RECONCILIATION_PLAN.md  DAILY_CHECKLIST.md  DEPLOYMENT_GUIDE.md  FINAL_STATUS_REPORT.md  FIXES_SUMMARY.md  FIX_JWT_401_ERROR.md  GOOGLE_OAUTH_FIX.md  GOOGLE_OAUTH_INVALID_CLIENT_FIX.md  PROJECT_STATUS.md  RAILWAY_DEBUG_PORT_ISSUE.md  REUSABLE_INTELLIGENCE.md  REUSABLE_INTELLIGENCE_REFERENCE.md  SESSION_HANDOFF.md  SPECKIT_DOS_AND_DONTS.md  SPECKIT_VALIDATION_FINDINGS.md
frontend/: .env.example  .gitignore  CLAUDE.md  README.md  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
infra/: CLAUDE.md
iot/: README.md
research/: CLAUDE.md  QUICK_REFERENCE.md  (+1 more)
(+279 files in other folders)
