[project]
name = "evolution-todo-console"
version = "2.0.0"
description = "Beautiful console todo application with Rich UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
todo = "console_app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["..", "."]

[tool.coverage.run]
source = ["console_app"]
omit = ["*/tests/*"]
